wrote intellisense to union

--- a/internal/sandbox.htm
+++ b/internal/sandbox.htm
@@ -10,10 +10,11 @@
     <script type="text/javascript" src="lib/benchmark.js"></script>
     <script type="text/javascript">
 
+        
+        var seq = Enumerable.range(1, 10);
 
-        var tes = Enumerable.range(1, 10).firstOrDefault("i=>i*3==6", 4);
+        
 
-        alert(tes);
 
     </script>
 </head>
