--- a/internal/sandbox.htm
+++ b/internal/sandbox.htm
@@ -12,13 +12,8 @@
 
         
 
-        var teko = Enumerable.range(1, 10).aggregate("", "s,x=>s+x", "'hoge' + $");
+        var teko = Enumerable.range(1, 10);
 
-        var zz = Enumerable.range(1, 10).scan("", "s,x=>s+x").select(
-            function (x) {
-                return 'hoge' + x;
-            }).toArray();
-        alert(zz);
 
 
     </script>
