add Enumerable.Utils reference

--- a/internal/sandbox.htm
+++ b/internal/sandbox.htm
@@ -10,13 +10,19 @@
     <script type="text/javascript" src="lib/benchmark.js"></script>
     <script type="text/javascript">
 
-        
+
 
         var teko = Enumerable.range(1, 10);
-        
-        var dict = teko.toDictionary();
 
-        teko.toLookup().toEnumerable(
+        var enumerator;
+        var hoge = Enumerable.Utils.createEnumerator(
+            function () { enumerator = Enumerable.range(1, 10).getEnumerator(); },
+            function () {
+                return (enumerator.moveNext())
+                    ? this.yieldReturn(enumerator.current())
+                    : this.yieldBreak();
+            },
+            function () { enumerator.dispose(); });
 
     </script>
 </head>
