dictionary moved to EqualityComparer model

--- a/internal/sandbox.htm
+++ b/internal/sandbox.htm
@@ -3,8 +3,15 @@
 <head>
     <title>test page</title>
     <script type="text/javascript" src="../linq.js"></script>
-    <script type="text/javascript" src="../typescript/file1.js"></script>
     <script type="text/javascript">
+
+        var dict = Enumerable.empty().toDictionary();
+
+        dict.add("a", 1);
+        dict.add("b", 2);
+        dict.add("c", 3);
+        dict.add("c", 100);
+        
 
 
 
