--- a/test/testrunner.htm
+++ b/test/testrunner.htm
@@ -20,9 +20,10 @@
     <script src="errorHandling.js" type="text/javascript"></script>
     <script src="functional.js" type="text/javascript"></script>
     <script src="dictionary.js" type="text/javascript"></script>
+    <script src="tuple.js" type="text/javascript"></script>
     <script src="arrayEnumerable.js" type="text/javascript"></script>
     <script src="whereSelectEnumerable.js" type="text/javascript"></script>
-    <script type="text/javascript" src="linq.qunit-test.js"></script>
+    <script src="linq.qunit-test.js" type="text/javascript"></script>
 </head>
 <body>
     <h1 id="qunit-header">linq.js test</h1>
