add list unittest

--- a/test/testrunner.htm
+++ b/test/testrunner.htm
@@ -25,6 +25,7 @@
     <script src="whereSelectEnumerable.js" type="text/javascript"></script>
     <script src="linq.qunit-test.js" type="text/javascript"></script>
     <script src="equalityComparer.js" type="text/javascript"></script>
+    <script src="list.js" type="text/javascript"></script>
 </head>
 <body>
     <h1 id="qunit-header">linq.js test</h1>
